--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -45,12 +45,12 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" href='css/bootstrap.min.css'>
-      <link rel="stylesheet" href='css/iziToast.min.css'>
-      <script src='js/jquery.min.js'></script>
-      <script src='js/bootstrap.min.js'></script>
-      <script src='js/iziToast.min.js'></script>
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" href='./css/bootstrap.min.css'>
+      <link rel="stylesheet" href='./css/iziToast.min.css'>
+      <script src='./js/jquery.min.js'></script>
+      <script src='./js/bootstrap.min.js'></script>
+      <script src='./js/iziToast.min.js'></script>
 
     <title>Hello World</title>
 </head>
