inject angular.min.js di homepage.html

--- a/www/homepage.html
+++ b/www/homepage.html
@@ -111,6 +111,7 @@
 	<script type="text/javascript" src="js/features/logout.js"></script>
 	<script type="text/javascript" src="js/notification/SmartNotification.min.js"></script>
 	<script type="text/javascript" src="js/pusher.min.js"></script>
+	<script type="text/javascript" src="js/angular.min.js"></script>
 	<script type="text/javascript" src="js/js-cookie/js.cookie.js"></script>
 
 	<script type="text/javascript">	
