--- a/platforms/browser/www/dashboard_menu.html
+++ b/platforms/browser/www/dashboard_menu.html
@@ -7,7 +7,7 @@
 				<a href="#" class="text-dark"  pusatriyal-role='routing' pusatriyal-target='includes/distribusi/menu-distribusi.html'>
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/distribution.png" width="64px" height="64px">
+							<img src="asset/icon/delivery-truck.png" width="64px" height="64px">
 							<h6>Distribusi</h6>
 						</div>
 					</div>
@@ -17,7 +17,7 @@
 				<a href="#" class="text-dark" pusatriyal-role='routing' pusatriyal-target='includes/penjualan/menu-penjualan.html'>
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/box.png" width="64px" height="64px">
+							<img src="asset/icon/sale.png" width="64px" height="64px">
 							<h6>Penjualan</h6>
 						</div>
 					</div>
@@ -27,7 +27,7 @@
 				<a href="#" class="text-dark" pusatriyal-role='routing' pusatriyal-target='includes/manasik/menu-manasik.html'>
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/airplane.png" width="64px" height="64px">
+							<img src="asset/icon/kaaba.png" width="64px" height="64px">
 							<h6>Manasik</h6>
 						</div>
 					</div>
@@ -37,7 +37,7 @@
 				<a href="#" class="text-dark" pusatriyal-role='routing' pusatriyal-target='includes/otorisasi/menu-otorisasi.html'>
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/document.png" width="64px" height="64px">
+							<img src="asset/icon/account.png" width="64px" height="64px">
 							<h6>Otorisasi</h6>
 						</div>
 					</div>
@@ -47,7 +47,7 @@
 				<a href="#" class="text-dark" pusatriyal-role="routing" pusatriyal-target="includes/kulakan/menu-kulakan.html">
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/shopping-bag.png" width="64px" height="64px">
+							<img src="asset/icon/shopping-bag1.png" width="64px" height="64px">
 							<h6>Kulakan</h6>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 				<a href="#" pusatriyal-role="routing" pusatriyal-target="includes/stock/menu-stock.html" class="text-dark">
 					<div class="card text-center">
 						<div class="card-body card-body-custom">
-							<img src="asset/icon/warehouse.png" width="64px" height="64px">
+							<img src="asset/icon/wholesaler.png" width="64px" height="64px">
 							<h6>Stock</h6>
 						</div>
 					</div>
