--- a/platforms/browser/www/homepage.html
+++ b/platforms/browser/www/homepage.html
@@ -112,10 +112,31 @@
 	<script type="text/javascript" src="js/notification/SmartNotification.min.js"></script>
 	<script type="text/javascript" src="js/pusher.min.js"></script>
 	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="js/loadingoverlay.min.js"></script>
+	<script type="text/javascript" src="js/loadingoverlay.js"></script>
 	<script type="text/javascript" src="js/js-cookie/js.cookie.js"></script>
 	<script type="text/javascript">
 
+
 	loading_icon = $('#loading_icon');
+
+		$.LoadingOverlay("show", {
+		    image       : "asset/img/icon-pusat-riyal.png",
+				background  : "rgb(71, 71, 71)",
+		});
+
+		setTimeout(function () {
+			$.LoadingOverlay("hide");
+		}, 1000);
+
+	// $(document).ajaxSend(function(event, jqxhr, settings){
+  //   $.LoadingOverlay("show");
+	// });
+  //
+	// $(document).ajaxComplete(function(event, jqxhr, settings){
+  //   $.LoadingOverlay("hide");
+	// });
+
 	iziToast.settings({
 		position:'topRight'//Where it will be shown. It can be bottomRight, bottomLeft, topRight, topLeft, topCenter, bottomCenter or center.
 	})
